...
    
    func getProductsForCategory(category: String) {
        let db = Firestore.firestore()
        db.collection("products2").whereField("category", isEqualTo: category).addSnapshotListener { querySnapshot, error in
            guard let documents = querySnapshot?.documents else {
                print(error)
                    return
            }
            for document in documents {
                let product = Product(name: document.data()["name"] as! String, id: document.data()["id"] as! String, imageLink: document.data()["imageLink"] as! String, price: document.data()["price"] as! String, category: document.data()["category"] as! String)
                print(product)
                self.productsForCategory.append(product)
            }
...
